--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -12,7 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: install node_modules
-        run: yarn
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
       - name: publish to github pages
         run: ./deploy_docs.sh
